border and spacing fixed on profilepage

--- a/m2/s2/progetto/scss/style.scss
+++ b/m2/s2/progetto/scss/style.scss
@@ -37,6 +37,10 @@ header {
 .edit {
   font-size: 3em;
 }
+.fit {
+  max-width: 600px;
+  margin: 0 auto;
+}
 .profile {
   .profile-title {
     font-size: 1.5em;
